--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Kamień, papier, nożyce</title>
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="sass/style.scss">
 </head>
 <body>
 	<div class="container">
-		<div id="buttons"></div>
+		<div id="buttons">
+			<button id="play-rock">KAMIEŃ</button>
+			<button id="play-paper">PAPIER</button>
+			<button id="play-scissors">NOŻYCE</button>
+		</div>
 		<div id="messages"></div>
 	</div>
 	<script src="js/functions.js"></script>
