Add headings (h1, h2) and acapit with game instruction

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
 	<div class="container">
+		<h1>GRA: <br /> "KAMIEŃ, PAPIER, NOŻYCE"</h1>
+		<p>INSTRUKCJA: <br />Wybierz guzik i zobacz co ja wybrałem... <br />Papier pokonuje kamień, kamień pokonuje nożyce, a nożyce papier.</p>
+		<h2>Zagrajmy!</h2>
 		<div id="buttons">
 			<button id="play-rock">KAMIEŃ</button>
 			<button id="play-paper">PAPIER</button>
